--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 # This file was generated automatically from conda-smithy. To update this configuration,
-# update the conda-forge.yml and/or the recipe/meta.yaml..
+# update the conda-forge.yml and/or the recipe/meta.yaml.
 
 language: generic
 
@@ -18,6 +18,8 @@ env:
 
 before_install:
     # Fast finish the PR.
+    - sudo apt-get -qq update
+    - sudo apt-get install  lftp
     - |
       (curl https://raw.githubusercontent.com/conda-forge/conda-forge-ci-setup-feedstock/master/recipe/ff_ci_pr_build.py | \
           python - -v --ci "travis" "${TRAVIS_REPO_SLUG}" "${TRAVIS_BUILD_NUMBER}" "${TRAVIS_PULL_REQUEST}") || exit 1
@@ -49,10 +51,12 @@ install:
       conda config --add channels karthikm 
       conda config --add channels conda-forge
       conda config --set show_channel_urls true
-      conda config --set anaconda_upload yes
+      conda config --set anaconda_upload no
       #conda install --yes --quiet conda-forge-ci-setup=1
       #source run_conda_forge_build_setup
-      anaconda -v login --username $USER --password $PASSWORD
+      #anaconda -v  -y login --username $USER --password $PASSWORD
 script:
   - conda build ./recipe
+  - ls /opt/conda/conda-bld/linux-ppc64le/
+  - lftp -c "open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER; set ssl-allow yes; set passive-mode yes; set ssl:verify-certificate no; put -O $FTP_DIRECTORY $(ls /opt/conda/conda-bld/linux-ppc64le/termco*) "
 #- upload_or_check_non_existence ./recipe conda-forge --channel=main -m ./${CONFIG}.yaml
